--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My React App</title>
-</head>
-<body>
-<div id="root"></div>
-</body>
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
